# experiments

ansible-plex/: README.md  Vagrantfile  inventory.yaml  playbook.yaml
ansible-plex/files/: transmission-settings.json.j2
ansible-plex/templates/: transmission-settings.json.j2
ansible/personal/: .gitignore  README.md  Vagrantfile  ansible.cfg  inventory.yaml  inventory.yml  playbook.yaml  playbook.yml
ansible/plex/: README.md  inventory.yaml  playbook.yaml
ansible/wireguard/: Vagrantfile  ansible.cfg  inventory.yaml  playbook.yaml  playbook.yml
book/: .gitignore  .prettierrc.js
book/src/: index.md
books/nasm/: README.md
books/nasm/hello5/: hello5  (+1 more)
course/statistics/: pyproject.toml
course/statistics/1.5/: step9.ipynb
course/statistics/1.7/: normar distribution.ipynb  step12.ipynb
course/statistics/1.8/: step8.ipynb
python_crash_course_2nd/chapter1/: hello_world.py
python_crash_course_2nd/chapter2/: number_eight.py
python_crash_course_2nd/chapter3/: bicycles.py  cars.py
python_crash_course_2nd/chapter8/: pizza.py
scripts/send_email_pritunl/: extract.js  get_profiles.js  send.py
statistics/: README.md  pyproject.toml
statistics/1.5/: step9.ipynb
statistics/1.6/: chart.ipynb
statistics/1.7/: man's height.ipynb  sigma.ipynb  step11.ipynb
statistics/1.8/: step8.ipynb
statistics/1.9/: step7.ipynb
themplates/grishyGenerate/: db.db  main.py
themplates/grishyTemplate/: README.md  gulpfile.js
themplates/memory_cards/: index.html  modern-normalize.css  style.css
treasure/treasure/: db.db  generate.py  main.py
webgl/: README.md
(+102 files in other folders)
