[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Sergey G <maingrishy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
